# Intern_Project

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
db/: postgres_client.py  redis_client.py
src/: main.py
src/api/: router.py
src/api/endpoints/: chat.py  list.py  search.py
src/core/: database.py  dependencies.py  embedding.py  llm_classifier.py
src/core/llm/: gemini_classifier.py  llm_base.py
src/core/llm/prompts/: base_prompt.py  important_task.py  prompt_registry.py
src/models/: database_model.py  schema.py
src/services/: chat_service.py  list_service.py  search_service.py
src/services/faiss_indices/: base_index.py  hnsw_index.py  ivf_index.py  pq_index.py
tests/: test_postgres.py  test_redis.py
