[tool.poetry]
name = "Server with chat, search, list api"
version = "0.1.0"
description = "A FastAPI-based chat and vector search system with PostgreSQL, Redis, and FAISS"
authors = ["dangtran dangtran2834@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.2"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"
sentence-transformers = "^3.1.1"
faiss-cpu = "^1.8.0"
numpy = "^1.26.4"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
google-genai = "^1.27.0"
fastapi-healthchecks = "^1.1.0" # require python >= 3.10
asyncpg = "^0.30.0"
pydantic-settings = { version = "^2.5.2", optional = true }

[tool.poetry.extras]
async = ["asyncpg"]
settings = ["pydantic-settings"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"